deploy/kubernetes/production/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: artifortress-api
spec:
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: artifortress-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: artifortress-api
    spec:
      containers:
        - name: api
          image: ghcr.io/sremani/artifortress-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8086
              name: http
          readinessProbe:
            httpGet:
              path: /health/ready
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /health/live
              port: http
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "2"
              memory: 2Gi
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 10001
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
