deploy/kubernetes/production/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kublai-worker
spec:
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: kublai-worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kublai-worker
    spec:
      containers:
        - name: worker
          image: ghcr.io/sremani/kublai-worker:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "2"
              memory: 2Gi
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 10001
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
