deploy/kubernetes/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kublai-api
spec:
  selector:
    app.kubernetes.io/name: kublai-api
  ports:
    - name: http
      port: 80
      targetPort: http
